--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -2,10 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: calc(50vh - 200px);
-    /* Center the form using calc */
-    /* height: 100vh; */
-    /* background-color: #f5f5f5; */
+    margin-top: 50px;
 }
 
 
