--- a/client/src/components/register/Register.module.css
+++ b/client/src/components/register/Register.module.css
@@ -1,12 +1,11 @@
-.login-container {
+.registerContainer {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 50px;
 }
 
-
-.login-form {
+.registerForm {
     border: 5px solid rgba(255, 255, 255, 0.5);
     border-color: black;
     padding: 20px;
@@ -19,26 +18,25 @@
     background: rgba(97, 95, 95, 0.7);
 }
 
-
-.login-form h2 {
+h2 {
     margin-bottom: 5%;
     font-size: 32px;
     color: rgba(255, 255, 255, 0.9);
 }
 
-.input-group {
+.inputGroup {
     width: 100%;
     margin-bottom: 15px;
 }
 
-.input-group label {
+.inputGroup label {
     display: block;
     font-size: 18px;
     margin-bottom: 5px;
     color: rgba(255, 255, 255, 0.9);
 }
 
-.input-group input {
+.inputGroup input {
     width: 100%;
     padding: 10px;
     font-size: 16px;
@@ -46,10 +44,9 @@
     border-radius: 10px;
     box-sizing: border-box;
     background: rgba(255, 255, 255, 0.7);
-
 }
 
-.login-button {
+.registerButton {
     width: 100%;
     padding: 12px;
     background-color: #333;
@@ -61,22 +58,22 @@
     transition: background-color 0.3s ease;
 }
 
-.login-button:hover {
+.registerButton:hover {
     background-color: #173905;
 }
 
-.register-link {
+.loginLink {
     margin-top: 15px;
     color: rgba(255, 255, 255, 0.9);
     font-size: 20px;
 }
 
-.register-link a {
+.loginLink a {
     color: rgb(255, 255, 255);
     text-decoration: none;
     font-weight: bold;
 }
 
-.register-link a:hover {
+.loginLink a:hover {
     text-decoration: underline;
 }
