--- a/client/src/components/bike-card/BikeCard.module.css
+++ b/client/src/components/bike-card/BikeCard.module.css
@@ -37,3 +37,26 @@
     margin: 8px 0;
     font-size: 1rem;
 }
+
+.bikeLink {
+    display: inline-block;
+    margin-bottom: 15px;
+    padding: 10px 20px;
+    background-color: #2b2b2c;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+    border: 5px;
+    border-color: white;
+    transition: all 0.5s ease;
+
+}
+
+.bikeLink:hover {
+    background-color: #000000;
+    transform: scale(1.09);
+    border: 2px solid rgb(102, 101, 101);
+    text-decoration: underline;
+    text-decoration-color: #970404;
+}
