show last four added motorcyles on Home page

--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
   background-color: #333;
-  padding: 10px 2%;
+  /* padding: 10px 2%; */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
