--- a/client/src/components/bike-create/BikeCreate.module.css
+++ b/client/src/components/bike-create/BikeCreate.module.css
@@ -15,13 +15,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: rgba(97, 95, 95, 0.7); 
+    background: rgba(97, 95, 95, 0.7);
 }
 
 h2 {
     margin-bottom: 5%;
     font-size: 32px;
-    color: rgba(255, 255, 255, 0.9); 
+    color: rgba(255, 255, 255, 0.9);
 }
 
 .inputGroup {
@@ -33,19 +33,21 @@ h2 {
     display: block;
     font-size: 18px;
     margin-bottom: 5px;
-    color: rgba(255, 255, 255, 0.9); 
+    color: rgba(255, 255, 255, 0.9);
 }
 
 
 .inputGroup input,
-.inputGroup select {
+.inputGroup select,
+.inputGroup textarea {
     width: 100%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 10px;
     box-sizing: border-box;
-    background: rgba(255, 255, 255, 0.7); 
+    background: rgba(255, 255, 255, 0.7);
+    resize: vertical;
 }
 
 .submitButton {
@@ -61,23 +63,23 @@ h2 {
 }
 
 .submitButton:hover {
-    background-color: #173905; 
+    background-color: #173905;
 }
 
 
 .inputGroupUsed {
     display: flex;
     align-items: center;
-    gap: 10px; 
-    margin-bottom: 15px; 
+    gap: 10px;
+    margin-bottom: 15px;
 }
 
 .inputGroupUsed label {
     font-size: 18px;
-    color: rgba(255, 255, 255, 0.9); 
+    color: rgba(255, 255, 255, 0.9);
 }
 
 .inputGroupUsed input[type="checkbox"] {
-    width: auto; 
+    width: auto;
     margin-left: 10px;
 }
