add error message in list view

--- a/client/src/components/catalog/Bikes.module.css
+++ b/client/src/components/catalog/Bikes.module.css
@@ -16,3 +16,12 @@
     justify-content: center;
     padding: 20px;
 }
+
+.errorMessage {
+    color: #0c0a0a;
+    font-size: 1.4rem;
+    margin-top: 20px;
+    font-weight: bold;
+    text-align: center;
+    background-color: red;
+}
