--- a/client/src/components/bike-create/BikeCreate.module.css
+++ b/client/src/components/bike-create/BikeCreate.module.css
@@ -83,3 +83,37 @@ h2 {
     width: auto;
     margin-left: 10px;
 }
+
+
+
+.errorMessage {
+    color: #711714; /* Red color for error */
+    font-weight: bold;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.errorLink {
+    display: inline-block;
+    padding: 12px 12px;
+    /* Increased padding for a larger button */
+    font-size: 1rem;
+    /* Slightly larger font size */
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    background: linear-gradient(135deg, #2b2b2c, #4e4e4f);
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s ease;
+    text-align: center;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+}
+
+.errorLink:hover {
+    background: linear-gradient(135deg, #4e4e4f, #000000);
+    transform: scale(1.05);
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+    color: #f1f1f1;
+    text-decoration: none;
+}
