--- a/client/src/components/login/Login.module.css
+++ b/client/src/components/login/Login.module.css
@@ -1,4 +1,3 @@
-
 .loginContainer {
     display: flex;
     justify-content: center;
@@ -77,4 +76,60 @@ h2 {
 
 .registerLink a:hover {
     text-decoration: underline;
+}
+
+.validationError {
+    color: #ff0000;
+    font-size: 14px;
+    margin-top: 5px;
+    text-align: center;
+    font-weight: bold;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 5px;
+    border-radius: 5px;
+
+    .validationError {
+        margin-block-end: 0;
+        /* Премахване на маржа след блока */
+    }
+}
+
+.serverError {
+    width: 80%;
+    color: #d9534f;
+    font-size: 16px;
+    margin-top: 15px;
+    text-align: center;
+    font-weight: bold;
+    background-color: rgba(13, 13, 13, 0.7);
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ff0000;
+}
+
+.spinner {
+    width: 80px;
+    height: 80px;
+    border: 6px solid transparent;
+    border-top: 6px solid #cf1e1e;
+    border-radius: 50%;
+    animation: spin 0.8s linear infinite;
+    margin-bottom: 20px;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.loadingContainer p {
+    font-size: 18px;
+    font-weight: 600;
+    color: #ffffff;
+    margin-top: 10px;
 }
