--- a/client/src/components/register/Register.module.css
+++ b/client/src/components/register/Register.module.css
@@ -102,3 +102,30 @@ h2 {
     border-radius: 5px;
     border: 1px solid #ff0000;
 }
+
+.spinner {
+    width: 80px;
+    height: 80px;
+    border: 6px solid transparent;
+    border-top: 6px solid #cf1e1e;
+    border-radius: 50%;
+    animation: spin 0.8s linear infinite;
+    margin-bottom: 20px;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.loadingContainer p {
+    font-size: 18px;
+    font-weight: 600;
+    color: #ffffff;
+    margin-top: 10px;
+}
