--- a/client/src/components/bike-create/BikeCreate.module.css
+++ b/client/src/components/bike-create/BikeCreate.module.css
@@ -84,29 +84,13 @@ h2 {
     margin-left: 10px;
 }
 
-
-
 .errorMessage {
-    color: #711714; /* Red color for error */
+    color: #83100c;
     font-weight: bold;
     margin-bottom: 10px;
     font-size: 20px;
 }
 
-.errorLink {
-    display: inline-block;
-    padding: 12px 12px;
-    font-size: 1rem;
-    font-weight: bold;
-    color: white;
-    text-decoration: none;
-    background: linear-gradient(135deg, #2b2b2c, #4e4e4f);
-    border-radius: 8px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
-    transition: all 0.3s ease;
-    text-align: center;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
-}
 
 .errorLink:hover {
     background: linear-gradient(135deg, #4e4e4f, #000000);
@@ -114,4 +98,88 @@ h2 {
     box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
     color: #f1f1f1;
     text-decoration: none;
+}
+
+.serverError {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    max-width: 400px;
+    color: #e24e49;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: rgba(101, 100, 100, 0.9);
+    padding: 20px;
+    border-radius: 10px;
+    border: 2px solid #ff0000;
+}
+
+.servErrorBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    color: #d9534f;
+    font-size: 16px;
+    text-align: center;
+    font-weight: bold;
+    background-color: rgba(13, 13, 13, 0.7);
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ff0000;
+    cursor: pointer;
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.servErrorBtn:hover {
+    transform: scale(1.1);
+}
+
+
+
+.spinner {
+    width: 80px;
+    height: 80px;
+    border: 6px solid transparent;
+    border-top: 6px solid #cf1e1e;
+    border-radius: 50%;
+    animation: spin 0.8s linear infinite;
+    margin-bottom: 20px;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.loadingContainer p {
+    font-size: 18px;
+    font-weight: 600;
+    color: #ffffff;
+    margin-top: 10px;
+}
+
+.validationError {
+    color: #ff0000;
+    font-size: 14px;
+    margin-top: 5px;
+    text-align: center;
+    font-weight: bold;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 5px;
+    border-radius: 5px;
+
+    .validationError {
+        margin-block-end: 0;
+    }
 }
